Fixed weird byte bug from the fork; fixed gradle; starting the client from a tutorial video